--- a/Map.html
+++ b/Map.html
@@ -24,6 +24,8 @@
 <body>
 
 	<div id="mapid" style="width: 1350px; height: 600px;"></div>
+	<!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
+	<script src="L.TileLayer.BetterWMS.js"></script>
 	<script>
 
 		var mymap = L.map('mapid').setView([51.9606649, 7.6261347], 13);
@@ -37,13 +39,21 @@
 			zoomOffset: -1
 		}).addTo(mymap);
 
+		/**
 		var wmsLayer = L.tileLayer.wms('https://www.wms.nrw.de/wms/unfallatlas?', {
-				layers: 'Unfallorte_2019',
-				format: 'image/png',
-				transparent: true
-				//format: 'application/geojson'
-			}
-			).addTo(mymap);
+			layers: 'Unfallorte_2019',
+			format: 'image/png',
+			transparent: true
+			//format: 'application/geojson'
+		}
+		).addTo(mymap);
+		*/
+
+		L.tileLayer.betterWms('https://www.wms.nrw.de/wms/unfallatlas?', {
+			layers: 'Unfallorte_2019',
+			transparent: true,
+			format: 'image/png'
+		}).addTo(mymap);
 
 	</script>
 
