--- a/Map.html
+++ b/Map.html
@@ -10,13 +10,9 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-		integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-		crossorigin="" />
-	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-		integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-		crossorigin=""></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<link rel="stylesheet" href="/leaflet/leaflet.css"/>
+	<script src="/leaflet/leaflet.js"></script>
+	<script src="jquery/jquery.min.js"></script>
 
 
 </head>
@@ -25,7 +21,7 @@
 
 	<div id="mapid" style="width: 1350px; height: 600px;"></div>
 	<!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
-	<script src="L.TileLayer.BetterWMS.js"></script>
+	<script src="js/L.TileLayer.BetterWMS.js"></script>
 	<script>
 
 		var mymap = L.map('mapid').setView([51.9606649, 7.6261347], 13);
