showing avoid polygons for different classes

--- a/Map.html
+++ b/Map.html
@@ -14,6 +14,10 @@
 	<script src="/leaflet/leaflet.js"></script>
 	<script src="jquery/jquery.min.js"></script>
 	<script src="/private/tokens.js"></script>
+	<script src="data/desnsityAreas.js"></script>
+	<script src="/js/createPolygons.js"></script>
+
+	
 
 
 </head>
