routing around risk levels

--- a/Map.html
+++ b/Map.html
@@ -37,6 +37,16 @@
                     <input type="radio" class="transport" name="transport" value="foot-walking"> Pedestrian
                     <!-- <input type="radio" class="transport" name="transport" value="wheelchair"> Wheelchair -->
                 </td>
+			</tr>
+			<tr>
+                <td><span>Risk level to avoid:</span></td>
+                <td>
+                    <input type="radio" class="risk" name="risk" value="class5"> Level 5
+                    <input type="radio" class="risk" name="risk" value="class4" checked> Level 4
+					<input type="radio" class="risk" name="risk" value="class3"> Level 3
+					<input type="radio" class="risk" name="risk" value="none"> None
+                    <!-- <input type="radio" class="transport" name="transport" value="wheelchair"> Wheelchair -->
+                </td>
             </tr>
             <tr>
                 <td><label for="start">Start:</label></td>
