show buffer on map

--- a/Map.html
+++ b/Map.html
@@ -12,7 +12,8 @@
 
 	<link rel="stylesheet" href="/leaflet/leaflet.css"/>
 	<script src="/leaflet/leaflet.js"></script>
-	<script src="jquery/jquery.min.js"></script>
+	<script src="/jquery/jquery.min.js"></script>
+	<script src="/turf/turf.min.js"></script>
 	<script src="/private/tokens.js"></script>
 	<script src="data/desnsityAreas.js"></script>
 	<script src="/js/createPolygons.js"></script>
