--- a/Map.html
+++ b/Map.html
@@ -15,6 +15,8 @@
 
 	<script src="/leaflet/leaflet.js"></script>
 	<script src="jquery/jquery.min.js"></script>
+	<script src="chart.js/chart.js"></script>
+
 	<script src="data/accidents.js"></script>
 
 
@@ -24,6 +26,12 @@
 <body>
 
 	<div id="mapid" style="width: 1350px; height: 600px;"></div>
+
+	<div class="chart-container" style="position: relative; height:50vh; width:50vw">
+		<canvas id="weekdays"></canvas>
+		<canvas id="category"></canvas>
+		<canvas id="light"></canvas>
+	</div>
 	<script>
 
 		var mymap = L.map('mapid').setView([51.9606649, 7.6261347], 13);
