participant, type and hour statistics

--- a/Map.html
+++ b/Map.html
@@ -31,6 +31,9 @@
 		<canvas id="weekdays"></canvas>
 		<canvas id="category"></canvas>
 		<canvas id="light"></canvas>
+		<canvas id="type"></canvas>
+		<canvas id="participants"></canvas>
+		<canvas id="time"></canvas>
 	</div>
 	<script>
 
