--- a/Map.html
+++ b/Map.html
@@ -70,6 +70,29 @@
 		<canvas id="participants"></canvas>
 		<canvas id="time"></canvas>
 	</div>
+
+
+	<div class="explanations">
+		<div id="statistics_legend">
+			<h4>Explanation of statistics</h4>
+			All data were taken from the <a href="https://unfallatlas.statistikportal.de">German Accident Atlas</a>.
+			The shown data is from 2019.
+			<br>FAQs and explanations of accident participants and the heaviest accident result regarding injuries can be found here:
+			<a href="https://unfallatlas.statistikportal.de/_info2020.html">German Accident Atlas | explanatory notes</a>
+			<br> Data of previous years can be found here: <a href="https://unfallatlas.statistikportal.de/_opendata2020.html">German Accident Atlas | OpenData</a>.
+			As well as additional information within the downloadable PDF containing the Metadata.
+		</div>
+		<div id="risk_legend">
+			<h4>Risk level explanation</h4>
+			<p>
+				The risk levels were derived from the accidents. Therefore a density map with 5 levels was created.
+				That means, level 1 has the lowest density of accidents and level 5 the highest density.
+				With this level 5 routes avoid areas where the most accidents happened, while level 3 routes already avoid
+				areas with fewer accidents. The possibility to avoid level 1 or 2 is not given, because with this you
+				could drive almost nowhere.
+			</p>
+		</div>
+	</div>
 	<!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
 	<script src="js/L.TileLayer.BetterWMS.js"></script>
 
