legend for risk levels

--- a/Map.html
+++ b/Map.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
 	<link rel="stylesheet" href="/leaflet/leaflet.css" />
-	<link rel="stylesheet" src="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
 
 	<script src="/leaflet/leaflet.js"></script>
 	<script src="jquery/jquery.min.js"></script>
