--- a/Map.html
+++ b/Map.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
 	<link rel="stylesheet" href="/leaflet/leaflet.css" />
-	<link rel="stylesheet" src="css/style.css" />
+	<link rel="stylesheet" href="css/style.css" />
 
 
 	<script src="/leaflet/leaflet.js"></script>
@@ -20,13 +20,14 @@
 	
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
 	
-	<script src="bootstrap/js/bootstrap.min.js"></script>
+	
 	<script src="/leaflet/leaflet.js"></script>
 
 	<script src="chart.js/chart.js"></script>
 	
 
 	<script src="/jquery/jquery.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
 	<script src="/turf/turf.min.js"></script>
 	<script src="/private/tokens.js"></script>
@@ -72,11 +73,11 @@
 					</tr>
 					<tr>
 						<td><label for="start">Start:</label></td>
-						<td><input type="text" class="form-control autoComplete input" id="start" name="Start"></td>
+						<td><input type="text" class="form-control autoComplete input" id="start" name="Start" placeholder="Street Nr., City, Country"></td>
 					</tr>
 					<tr>
 						<td><label for="finish">Finish:</label></td>
-						<td><input type="text" class="form-control autoComplete input" id="finish" name="Finish"></td>
+						<td><input type="text" class="form-control autoComplete input" id="finish" name="Finish" placeholder="Street Nr., City, Country"></td>
 					</tr>
 					<tr>
 						<td><button type="button" class="btn btn-primary" id="submit" >Submit</button></td>
@@ -92,20 +93,126 @@
 		</div>
 	  </div>
 	  <div class="row">
-		<div class="col-xs-4 col-md-2">
-			<div class="chart-container" style="position: relative; width: 100%; height: 600px;">
-				<canvas id="weekdays" height = 300px></canvas>
-				<canvas id="category" height = 300px></canvas>
-			  </div>
-		</div>
-		<div class="col-xs-4 col-md-8">
+		<div class="col-xs-6 col-md-8">
 			<div id="mapid" style="width: 100%; height: 600px;"></div>
 		</div>
-		<div class="col-xs-4 col-md-2">
-			<div class="chart-container" style="position: relative; width: 100%; height: 600px;">
-				<canvas id="light" height = 300px></canvas>
-				<canvas id="type" height = 300px></canvas>
+		<div class="col-xs-6 col-md-4">
+			<ul class="nav nav-tabs">
+				<li><a class="nav-link hideme" data-toggle="tab" id="none" href="#home">None</a></li>
+				<li><a class="nav-link active hideme" data-toggle="tab" id="level5" href="#menu1">Level 5</a></li>
+				<li><a class="nav-link hideme" data-toggle="tab" id="level4" href="#menu2">Level 4</a></li>
+				<li><a class="nav-link hideme" data-toggle="tab" id="level3" href="#menu3">Level 3</a></li>
+			  </ul>
+			  
+			  <div class="tab-content">
+				<div id="home" class="tab-pane fade in active">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="weekdays0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="category0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="light0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="type0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+
+				</div>
+				<div id="menu1" class="tab-pane fade">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="weekdays5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="category5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="light5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="type5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					</div>
+				<div id="menu2" class="tab-pane fade">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="weekdays4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="category4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="light4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="type4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+				</div>
+				<div id="menu3" class="tab-pane fade">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="weekdays3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="category3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="light3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 100%; height: 100%;">
+								<canvas id="type3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+				</div>
 			  </div>
+			</div>
+
 		</div>
 	  </div>
 
@@ -113,17 +220,20 @@
 
 
 
-
+<!--
 	<div class="chart-container" style="position: relative; height:50vh; width:50vw">
 
 		<canvas id="participants"></canvas>
 		<canvas id="time"></canvas>
-	</div>
+	</div>-->
 	<!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
 	<script src="js/L.TileLayer.BetterWMS.js"></script>
 
 	<script>
 		var mymap = L.map('mapid').setView([51.9606649, 7.6261347], 13);
+		var southWest = L.latLng(34.072711,31.758391),
+                northEast = L.latLng(36.113055, 35.124228),
+                bounds = L.latLngBounds(southWest, northEast);
 
 		var osmlayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: 'Map data: &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
