test stripes as fill pattern

--- a/Map.html
+++ b/Map.html
@@ -18,6 +18,7 @@
 	<script src="chart.js/chart.js"></script>
 
 	<script src="/jquery/jquery.min.js"></script>
+	<script src="leaflet.pattern/leaflet.pattern-src.js"></script>
 	<script src="/turf/turf.min.js"></script>
 	<script src="/private/tokens.js"></script>
 	<script src="data/desnsityAreas.js"></script>
