--- a/Map.html
+++ b/Map.html
@@ -21,12 +21,8 @@
 	<script src="chart.js/chart.js"></script>
 	
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
-	
-	
+		
 	<script src="/leaflet/leaflet.js"></script>
-
-	<script src="chart.js/chart.js"></script>
-	
 
 	<script src="/jquery/jquery.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
@@ -63,7 +59,7 @@
 	  </div>
 	</div>
 	  <div class="row">
-		<div class="col-xs-6 col-md-8">
+		<div class="col-xxl-8 col-xl-6 col-md-12">
 			<div id="map">
 				<div id="leafletMap"></div>
 		
@@ -101,7 +97,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 col-md-4">
+		<div class="col-xxl-4 col-lg-6">
 			<ul class="nav nav-tabs">
 				<li><a class="nav-link hideme" data-toggle="tab" id="none" href="#home">None</a></li>
 				<li><a class="nav-link active hideme" data-toggle="tab" id="level5" href="#menu1">Level 5</a></li>
@@ -139,7 +135,7 @@
 				</div>
 				<div id="menu1" class="tab-pane fade">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-lg-6">
 							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
 								<canvas id="weekdays5" height = "50%" width="50%"></canvas>
 							  </div>
