--- a/Map.html
+++ b/Map.html
@@ -22,6 +22,7 @@
 
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script> 
 		
 	<script src="/leaflet/leaflet.js"></script>
 
@@ -34,9 +35,7 @@
 	<script src="/js/createPolygons.js"></script>
 	<script src="/js/autocomplete.js"></script>
 	<script src="data/accidents.js"></script>
-
-
-
+	
 </head>
 
 <body>
