--- a/Map.html
+++ b/Map.html
@@ -22,7 +22,7 @@
 
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script> 
+	<script src="/chart.js/Chart.js"></script>
 		
 	<script src="/leaflet/leaflet.js"></script>
 
