--- a/Map.html
+++ b/Map.html
@@ -70,6 +70,8 @@
 
 					<div id="routeSelection" class="sidebar" style="visibility: visible;">
 						<div class="sidebar" id="ajaxLoad"></div>
+						<div class="row">
+							<div class="col-md-6">
 						<table>
 							<tr>
 								<td><span>Transport:</span></td>
@@ -94,6 +96,14 @@
 								<td></td>
 							</tr>
 						</table>
+						</div>
+						<div class="col-md-6">
+							Route Information:
+						 <div  id="info">
+
+						 </div>
+						</div>
+					</div>
 					</div>
 				</div>
 			</div>
@@ -132,6 +142,18 @@
 							  </div>
 						</div>
 					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="participants0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="time0" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
 
 				</div>
 				<div id="menu1" class="tab-pane fade">
@@ -156,6 +178,18 @@
 						<div class="col-md-6">
 							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
 								<canvas id="type5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="participants5" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="time5" height = "50%" width="50%"></canvas>
 							  </div>
 						</div>
 					  </div>
@@ -185,6 +219,18 @@
 							  </div>
 						</div>
 					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="participants4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="time4" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
 				</div>
 				<div id="menu3" class="tab-pane fade">
 					<div class="row">
@@ -208,6 +254,18 @@
 						<div class="col-md-6">
 							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
 								<canvas id="type3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+					  </div>
+					  <div class="row">
+						<div class="col-xs-12 col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="participants3" height = "50%" width="50%"></canvas>
+							  </div>
+						</div>
+						<div class="col-md-6">
+							<div class="chart-container" style="position: relative; width: 90%; height: 90%;">
+								<canvas id="time3" height = "50%" width="50%"></canvas>
 							  </div>
 						</div>
 					  </div>
