adjusted layer names

--- a/HowTo.html
+++ b/HowTo.html
@@ -68,11 +68,13 @@
 			<h4>Risk level explanation</h4>
 			<p>
 				The risk levels were derived from the accidents. Therefore a density map with 5 levels was created.
-				That means, level 1 has the lowest density of accidents and level 5 the highest density.
+				That means, level 1 has the lowest density of accidents and level 5 the highest density. The areas
+				shown in the map are levels 3 (Low risk) to 5 (High risk).
 				With this level 5 routes avoid areas where the most accidents happened, while level 3 routes already
 				avoid
 				areas with fewer accidents. The possibility to avoid level 1 or 2 is not given, because with this you
-				could drive almost nowhere.
+				could drive almost nowhere and it does not make a lot of sense to avoid a street just because there
+				happened just one accident within one year.
 			</p>
 		</div>
 	</div>
