small bug fixes

--- a/Map.html
+++ b/Map.html
@@ -98,7 +98,7 @@
 						</table>
 						</div>
 						<div class="col-md-6">
-							Route Information:
+							Route information:
 						 <div  id="info">
 
 						 </div>
@@ -110,10 +110,10 @@
 		</div>
 		<div class="col-xxl-4 col-lg-6">
 			<ul class="nav nav-tabs">
-				<li><a class="nav-link hideme" data-toggle="tab" id="none" href="#home">None</a></li>
-				<li><a class="nav-link active hideme" data-toggle="tab" id="level5" href="#menu1">Level 5</a></li>
-				<li><a class="nav-link hideme" data-toggle="tab" id="level4" href="#menu2">Level 4</a></li>
-				<li><a class="nav-link hideme" data-toggle="tab" id="level3" href="#menu3">Level 3</a></li>
+				<li><a class="nav-link hideme" data-toggle="tab" id="none" href="#home">Shortest</a></li>
+				<li><a class="nav-link active hideme" data-toggle="tab" id="level5" href="#menu1">Avoid high risk</a></li>
+				<li><a class="nav-link hideme" data-toggle="tab" id="level4" href="#menu2">Avoid medium risk</a></li>
+				<li><a class="nav-link hideme" data-toggle="tab" id="level3" href="#menu3">Avoid low risk</a></li>
 			  </ul>
 
 			  <div class="tab-content">
